--- a/Map.css
+++ b/Map.css
@@ -37,14 +37,14 @@
 }
 
 .Map .MapPOIList{
-    position: fixed;
+    position: absolute;
     background-color: white;
     max-height: 70%;
     overflow-y: auto;
     top: 10px;
     right: 10px;
-    width: 280px;
-    border-bottom: solid 1px silver;
+    width: 60%;
+    /*border-bottom: solid 1px silver;*/
 }
 
 .MapTool{
